---
version: 0.04
date:    
changes:
- Allow single numbers for selection
---
version: 0.03
date:    Thu Nov 18 22:31:39 PST 2010
changes:
- Glob together multiple config files.
---
version: 0.02
date:    Tue Oct  5 21:30:41 PDT 2010
changes:
- Add git clone support
- Add names selection
---
version: 0.01
date:    Sat Sep 18 00:36:35 PDT 2010
changes:
- Initial version.